# cukicutter

./: cookiecutter.json
{{ cookiecutter.repo_name }}/: .travis.yml  CHANGES.rst  LICENSE  Makefile  Pipfile  README.rst  pyproject.toml  pytest.ini  setup.py
